# automaticWristRehabilitationMechanism

./: .gitignore  .gitmodules
code/: CMakeLists.txt
code/ProjectFiles/: CMakeLists.txt
code/ProjectFiles/include/: Motors_AO.h  Motors_AODemo.h  UI_AO.h  blinky_AO.h  bsp.h  dev_hd44780.h  printer_AO.h
code/ProjectFiles/src/: Motors_AO.c  Motors_AODemo.c  UI_AO.c  blinky_AO.c  bsp.c  dev_hd44780.c  main.c  printer_AO.c
code/ProjectFiles_motorTest/: CMakeLists.txt
code/ProjectFiles_motorTest/include/: AS5600.h  Motors_AO.h  blinky_AO.h
code/ProjectFiles_motorTest/src/: AS5600.c  Motors_AO.c  blinky_AO.c  bsp.c  main.c
code/freeact/: CMakeLists.txt  FreeAct.c
code/freeact/include/: FreeAct.h
code/freertos/: CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig_QP.h
code/pio_stepper/: CMakeLists.txt
code/pio_stepper/include/: pio_stepper.h
code/pio_stepper/src/: pio_stepper.c
code/pio_stepper/src/driver/: stepper.pio
